@@ -123,6 +123,9 @@ toggle_audio_spectrum BITMAP "bitmaps/toggle_audio_spectrum.bmp"
 toggle_audio_link BITMAP "bitmaps/toggle_audio_link.bmp"
 toggle_video_autoscroll BITMAP "bitmaps/toggle_video_autoscroll.bmp"
 
+arrow_up BITMAP "bitmaps/arrow_up.bmp"
+arrow_down BITMAP "bitmaps/arrow_down.bmp"
+
 splash BITMAP "bitmaps/splash.bmp"
 
 wxicon ICON "bitmaps/icon.ico"
